[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "derivpricing"
version = "0.1.0"
description = "Options pricing and Heston calibration library (WQU MScFE 620)"
requires-python = ">=3.9"
dependencies = ["numpy", "scipy"]

[tool.setuptools.packages.find]
where = ["src"]
